# Stock-App

./: .env.example  .env.huggingface  .gitignore  Dockerfile  Makefile  README.md  README_HF.md  README_NETLIFY.md  README_RENDER.md  README_SPACE.md  pyproject.toml  render.yaml  requirements-hf.txt  requirements.txt  test_jiofin.py  test_jiofin_train.py  test_market.py  test_yf.py  test_yf_api.py  test_yf_bulk.py  test_yf_parse.py  test_yf_period.py  uptime_server.py
backend/: __init__.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  errors.py  middleware.py
backend/app/cache/: __init__.py  manager.py
backend/app/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py
backend/app/data/: __init__.py
backend/app/database/: __init__.py  base.py  session.py
backend/app/ml/: __init__.py
backend/app/providers/: __init__.py  base.py  chain.py  nse_provider.py  seed_provider.py  yfinance_provider.py
backend/app/repositories/: __init__.py  base.py  models_repo.py  predictions.py  prices.py  stocks.py  users.py
backend/app/scheduler/: __init__.py  jobs.py
backend/app/schemas/: __init__.py  insights.py  market.py  predictions.py  stocks.py  users.py
backend/app/services/: __init__.py  export_service.py  indicator_service.py  insights_service.py  market_data.py  prediction_service.py  stock_service.py  watchlist_service.py
backend/app/utils/: __init__.py
backend/tests/: conftest.py  fakes.py
backend/tests/api/: test_api.py
backend/tests/integration/: test_prediction_service.py  test_provider_chain.py  test_repositories.py
backend/tests/unit/: test_indicators_features.py  test_metrics_splitter.py  test_models_pipeline.py  test_seed_provider.py
docs/: agent_handoff.md  api_reference.md  architecture.md  changelog.md  database_schema.md  decisions.md  deployment.md  implementation_status.md  known_issues.md  ml_pipeline.md  module_index.md  roadmap.md  ui_wireframes.md
frontend/: .env.example  .env.production  README.md  index.html  netlify.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/config/: env.ts
frontend/src/context/: ToastContext.tsx
frontend/src/hooks/: api.ts
frontend/src/lib/: api.ts  charts.ts  constants.ts  format.ts  (+1 more)
(+81 files in other folders)
