[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stocksense-ai"
version = "0.1.0"
description = "AI-powered stock market analysis and 7-day forecasting platform for NSE equities"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "StockSense AI Team" }]
keywords = ["stocks", "nse", "forecasting", "machine-learning", "fastapi"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "prophet>=1.1",
    "torch>=2.2",
    "httpx>=0.27",
    "yfinance>=0.2.40",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
# All built-in forecasting engines are runtime dependencies.  This extra only
# adds CatBoost for experiments; it is not used by the default low-memory zoo.
ml-boost = []
ml-full = ["catboost>=1.2"]
postgres = ["psycopg[binary]>=3.1"]
cache = ["redis>=5.0"]
export = ["openpyxl>=3.1", "reportlab>=4.0"]
dev = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "openpyxl>=3.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests>=2.31",
]

[project.scripts]
stocksense-api = "backend.app.main:main"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.setuptools.package-data]
"backend.app" = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
addopts = "-q --disable-warnings"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests hitting db/provider chain",
]

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RET", "TID"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["B", "RET"]

[tool.mypy]
python_version = "3.11"
packages = ["backend.app"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
strict_equality = true
